--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <header>
         <nav class="navbar navbar-expand-lg nav-fondo">
             <div class="container-fluid">
-                <a class="navbar-brand font-color" href="#">
-                    <img class="" src="">
-                    Amrita
+                <a class="navbar-brand font-color nav_link" href="#">
+                    <img class="logo" src="resources/logo.png">
+                    
                 </a>
                 <button class="navbar-toggler navbar-toggler-border-color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label=" Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -25,7 +25,7 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link font-color" href="index.html">Inicio</a>
+                            <a class="nav-link font-color nav_link" href="index.html"></a>
                         </li>
                     </ul>
                 </div>
@@ -42,7 +42,7 @@
                 <div class="card card_font card_one" style="width: 18rem;">
                     <img src="resources/placeholder-uno.jpg" class="card-img-top card_img" alt="...">
                     <div class="card-body">
-                        <h2 class="card-text">Sobre mi</h2>
+                        <a href="pages/about" target="_blank" class="card_one"><h2 class="card-text ">Sobre mi</h2></a>
                     </div>
                 </div>
             </article>
@@ -50,7 +50,7 @@
                 <div class="card card_font card_two" style="width: 18rem;">
                     <img src="" class="card-img-top card_img" alt="...">
                     <div class="card-body">
-                        <h2 class="card-text">Sobre mi</h2>
+                        <a href="pages/registros.html" target="_blank" class="card_two"><h2 class="card-text ">Registros Akáshicos</h2></a>
                     </div>
                 </div>
             </article>
@@ -58,7 +58,7 @@
                 <div class="card card_font card_three" style="width: 18rem;">
                     <img src="" class="card-img-top card_img" alt="...">
                     <div class="card-body">
-                        <h2 class="card-text">Sobre mi</h2>
+                        <a href="pages/tarot.html" target="_blank" class="card_three"><h2 class="card-text">Tarot Evolutivo</h2></a>
                     </div>
                 </div>
             </article>
@@ -66,7 +66,7 @@
                 <div class="card card_font card_four" style="width: 18rem;">
                     <img src="" class="card-img-top card_img" alt="...">
                     <div class="card-body">
-                        <h2 class="card-text">Sobre mi</h2>
+                        <a href="pages/mensajes.html" target="_blank" class="card_four"><h2 class="card-text">Mensajes Angelicos</h2></a>
                     </div>
                 </div>
             </article>
@@ -74,7 +74,7 @@
                 <div class="card card_font card_five" style="width: 18rem;">
                     <img src="" class="card-img-top card_img" alt="...">
                     <div class="card-body">
-                        <h2 class="card-text">Sobre mi</h2>
+                        <a href="pages/talleres.html" target="_blank" class="card_five"><h2 class="card-text">Talleres</h2></a>
                     </div>
                 </div>
             </article>
@@ -82,7 +82,7 @@
                 <div class="card card_font card_six" style="width: 18rem;">
                     <img src="" class="card-img-top card_img" alt="...">
                     <div class="card-body">
-                        <h2 class="card-text">Sobre mi</h2>
+                        <h2 class="card-text"></h2>
                     </div>
                 </div>
             </article>
@@ -90,7 +90,7 @@
                 <div class="card card_font card_seven" style="width: 18rem;">
                     <img src="" class="card-img-top card_img" alt="...">
                     <div class="card-body">
-                        <h2 class="card-text">Sobre mi</h2>
+                        <h2 class="card-text">Contactame</h2>
                     </div>
                 </div>
             </article>
