--- a/pages/registros.html
+++ b/pages/registros.html
@@ -4,19 +4,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel ="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Marcellus&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg">
+        <nav class="navbar navbar-expand-lg nav-fondo">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img class="" src="">
-                    Amrita
+                <a class="navbar-brand font-color nav_link" href="#">
+                    <img class="logo" src="../resources/logo.png">
+                    
                 </a>
                 <button class="navbar-toggler navbar-toggler-border-color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label=" Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -24,22 +25,22 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link" href="index.html">Inicio</a>
+                            <a class="nav-link font-color nav_link separator" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item page_active">
+                            <a class="nav-link font-color nav_link page_active separator" href="#">REGISTROS AKÁSHICOS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Talleres</a>
+                            <a class="nav-link font-color nav_link separator" href="tarot.html">Tarot Evolutivo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Registros Akashicos</a>
+                            <a class="nav-link font-color nav_link separator" href="mensajes.html">Mensajes Angelicos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Tarot Evolutivo</a>
+                            <a class="nav-link font-color nav_link separator" href="talleres.html">Talleres</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Mensajes Angelicales</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contactame</a>
+                            <a class="nav-link font-color nav_link" href="contacto.html">Contactame</a>
                         </li>
                     </ul>
                 </div>
@@ -47,8 +48,23 @@
         </nav>
     </header>
     <main>
-
-
+        <div class="card_reg">
+        <div class="card mb-3 card-reg">
+            <div class="row g-0" >
+                <div class="col-md-4">
+                    <img src="..." class="img-fluid rounded-start" alt="...">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h1 class="card-title">Registros Akáshicos</h1>
+                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem fugit necessitatibus illum labore? Nulla quibusdam, nostrum quia et, vel harum optio molestiae recusandae, autem tempore temporibus inventore totam? Accusantium, incidunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quisquam tempore pariatur placeat odio facilis veritatis repudiandae nesciunt cupiditate eveniet atque ullam, porro ab culpa temporibus! Quisquam dolore molestiae expedita. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat provident repudiandae distinctio praesentium quidem fugit veniam labore numquam, facilis ab dignissimos beatae similique impedit iste natus dolore, perspiciatis sapiente debitis!</p>
+                        <p class="card-text"><small class="text-muted">$$$$$$</small></p>
+                        <a href="#" class="btn btn-primary">Quiero </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        </div>
     </main>
     <footer>
 
