--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             </article>
             <article class="card_dos">
                 <div class="card card_font card_two" style="width: 18rem;">
-                    <img src="" class="card-img-top card_img" alt="...">
+                    <img src="resources/cruz-ankdos.jpg" class="card-img-top card_imgdos" alt="...">
                     <div class="card-body">
                         <a href="pages/registros.html" target="_blank" class="card_two"><h2 class="card-text ">Registros Akáshicos</h2></a>
                     </div>
@@ -56,7 +56,7 @@
             </article>
             <article class="card_tres">
                 <div class="card card_font card_three" style="width: 18rem;">
-                    <img src="" class="card-img-top card_img" alt="...">
+                    <img src="resources/mano-fatima.jpg" class="card-img-top card_imgtres" alt="...">
                     <div class="card-body">
                         <a href="pages/tarot.html" target="_blank" class="card_three"><h2 class="card-text">Tarot Evolutivo</h2></a>
                     </div>
@@ -64,7 +64,7 @@
             </article>
             <article class="card_cuatro">
                 <div class="card card_font card_four" style="width: 18rem;">
-                    <img src="" class="card-img-top card_img" alt="...">
+                    <img src="resources/mensajes-ang.jpg" class="card-img-top card_imgcuatro " alt="...">
                     <div class="card-body">
                         <a href="pages/mensajes.html" target="_blank" class="card_four"><h2 class="card-text">Mensajes Angelicos</h2></a>
                     </div>
@@ -72,7 +72,7 @@
             </article>
             <article class="card_cinco">
                 <div class="card card_font card_five" style="width: 18rem;">
-                    <img src="" class="card-img-top card_img" alt="...">
+                    <img src="resources/buda.jpg" class="card-img-top card_imgtres" alt="...">
                     <div class="card-body">
                         <a href="pages/talleres.html" target="_blank" class="card_five"><h2 class="card-text">Talleres</h2></a>
                     </div>
@@ -80,7 +80,7 @@
             </article>
             <article class="card_seis">
                 <div class="card card_font card_six" style="width: 18rem;">
-                    <img src="" class="card-img-top card_img" alt="...">
+                    <img src="resources/angel.jpg" class="card-img-top card_img" alt="...">
                     <div class="card-body">
                         <h2 class="card-text"></h2>
                     </div>
@@ -88,9 +88,9 @@
             </article>
             <article class="card_siete">
                 <div class="card card_font card_seven" style="width: 18rem;">
-                    <img src="" class="card-img-top card_img" alt="...">
+                    <img src="resources/flordloto.jpg" class="card-img-top card_imgtres" alt="...">
                     <div class="card-body">
-                        <h2 class="card-text">Contactame</h2>
+                        <h2 class="card-text">Contacto</h2>
                     </div>
                 </div>
             </article>
