--- a/pages/registros.html
+++ b/pages/registros.html
@@ -25,22 +25,22 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link font-color nav_link separator" href="../index.html">Inicio</a>
+                            <a class="nav-link font-color nav_link separator nav_reg" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item page_active">
-                            <a class="nav-link font-color nav_link page_active separator" href="#">REGISTROS AKÁSHICOS</a>
+                            <a class="nav-link font-color nav_link page_active separator nav_reg" href="#">REGISTROS AKÁSHICOS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color nav_link separator" href="tarot.html">Tarot Evolutivo</a>
+                            <a class="nav-link font-color nav_link separator nav_reg" href="tarot.html">Tarot Evolutivo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color nav_link separator" href="mensajes.html">Mensajes Angelicos</a>
+                            <a class="nav-link font-color nav_link separator nav_reg" href="mensajes.html">Mensajes Angelicos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color nav_link separator" href="talleres.html">Talleres</a>
+                            <a class="nav-link font-color nav_link separator nav_reg" href="talleres.html">Talleres</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color nav_link" href="contacto.html">Contactame</a>
+                            <a class="nav-link font-color nav_link nav_reg" href="contacto.html">Contactame</a>
                         </li>
                     </ul>
                 </div>
@@ -52,7 +52,7 @@
         <div class="card mb-3 card-reg">
             <div class="row g-0" >
                 <div class="col-md-4">
-                    <img src="..." class="img-fluid rounded-start" alt="...">
+                    <img src="../resources/registros-uno.jfif" class="img-fluid rounded-start reg-img" alt="...">
                 </div>
                 <div class="col-md-8">
                     <div class="card-body">
