--- a/pages/about.html
+++ b/pages/about.html
@@ -25,22 +25,22 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link font-color separator nav-tarot" href="../index.html">Inicio</a>
+                            <a class="nav-link font-color separator nav-mnsj" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color separator nav-tarot" href="../pages/registros.html">Registros Akáshicos</a>
+                            <a class="nav-link font-color separator nav-mnsj" href="../pages/registros.html">Registros Akáshicos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color separator nav-tarot" href="tarot.html">Tarot Evolutivo</a>
+                            <a class="nav-link font-color separator nav-mnsj" href="tarot.html">Tarot Evolutivo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color separator nav-tarot" href="mensajes.html">Mensajes Angelicos</a>
+                            <a class="nav-link font-color separator nav-mnsj" href="mensajes.html">Mensajes Angelicos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color page_active separator nav-tarot" href="talleres.html">TALLERES</a>
+                            <a class="nav-link font-color separator nav-mnsj" href="talleres.html">Talleres</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color nav-tarot" href="contacto.html">Contactame</a>
+                            <a class="nav-link font-color nav-mnsj" href="contacto.html">Contactame</a>
                         </li>
                     </ul>
                 </div>
@@ -50,21 +50,11 @@
     <main>
         <div class="max-container">
             <div class="card-main">
-                <img src="../resources/talleres.jfif" class="msnj-img img-fluid rounded-start" alt="">
-                <div class="card-body card-tarot">
-                    <h1 class="card-title">Proximo Taller</h1>
-                    <p class="mensj-ange">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab at culpa veritatis commodi! Molestias amet suscipit temporibus necessitatibus error optio est recusandae voluptatibus corporis, eius laboriosam! Aut ducimus corrupti possimus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sequi inventore quaerat molestias consequuntur qui esse vel, consequatur, dicta deserunt eveniet et! Praesentium mollitia cum aperiam tenetur placeat! Velit, nobis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim, consequuntur quis. Corporis facere tempora aliquam aperiam ad asperiores nam ratione facilis, quis hic, in eligendi deleniti nemo ipsum, quisquam impedit!</p>
-                    <p>$$$$</p>
-                    <a href="#" class="btn btn-taller boton">Quiero </a>
+                <img src="../resources/about.jfif" class="tarot_img img-fluid rounded-start" alt="">
+                <div class="card-body card-mnsj">
+                    <h1 class="card-title">Sobre Mi</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab at culpa veritatis commodi! Molestias amet suscipit temporibus necessitatibus error optio est recusandae voluptatibus corporis, eius laboriosam! Aut ducimus corrupti possimus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sequi inventore quaerat molestias consequuntur qui esse vel, consequatur, dicta deserunt eveniet et! Praesentium mollitia cum aperiam tenetur placeat! Velit, nobis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim, consequuntur quis. Corporis facere tempora aliquam aperiam ad asperiores nam ratione facilis, quis hic, in eligendi deleniti nemo ipsum, quisquam impedit!</p>
                 </div>
             </div>
         </div>
     </main>
-    <footer>
-
-
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-</body>
-</html>
