--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -25,22 +25,22 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link font-color separator nav-tarot" href="../index.html">Inicio</a>
+                            <a class="nav-link font-color separator nav-reg" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color separator nav-tarot" href="../pages/registros.html">Registros Akáshicos</a>
+                            <a class="nav-link font-color separator nav-reg" href="../pages/registros.html">Registros Akáshicos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color separator nav-tarot" href="tarot.html">Tarot Evolutivo</a>
+                            <a class="nav-link font-color separator nav-reg" href="tarot.html">Tarot Evolutivo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color separator nav-tarot" href="mensajes.html">Mensajes Angelicos</a>
+                            <a class="nav-link font-color separator nav-reg" href="mensajes.html">Mensajes Angelicos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color page_active separator nav-tarot" href="talleres.html">TALLERES</a>
+                            <a class="nav-link font-color separator nav-reg" href="talleres.html">Talleres</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link font-color nav-tarot" href="contacto.html">Contactame</a>
+                            <a class="nav-link font-color page_active nav-reg" href="contacto.html">CONTACTAME</a>
                         </li>
                     </ul>
                 </div>
@@ -51,20 +51,23 @@
         <div class="max-container">
             <div class="card-main">
                 <img src="../resources/talleres.jfif" class="msnj-img img-fluid rounded-start" alt="">
-                <div class="card-body card-tarot">
-                    <h1 class="card-title">Proximo Taller</h1>
-                    <p class="mensj-ange">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab at culpa veritatis commodi! Molestias amet suscipit temporibus necessitatibus error optio est recusandae voluptatibus corporis, eius laboriosam! Aut ducimus corrupti possimus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sequi inventore quaerat molestias consequuntur qui esse vel, consequatur, dicta deserunt eveniet et! Praesentium mollitia cum aperiam tenetur placeat! Velit, nobis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim, consequuntur quis. Corporis facere tempora aliquam aperiam ad asperiores nam ratione facilis, quis hic, in eligendi deleniti nemo ipsum, quisquam impedit!</p>
-                    <p>$$$$</p>
-                    <a href="#" class="btn btn-taller boton">Quiero </a>
+                <div class="card-body card-reg">
+                    <h1 class="card-title">Ponete en contacto conmigo</h1>
+                    <div >
+                        <div class="card-contacto">
+                            <img src="../resources/instagram.png" alt="" class="redes">
+                            <p class="mensj-ange text-cont">  @amrita.espaciodeluz</p>
+                        </div>
+                        <div class="card-contacto">
+                            <img src="../resources/mail.png" alt="" class="redes">
+                            <p class="mensj-ange text-cont">  mail@gmail.com</p>
+                        </div>
+                        <div class="card-contacto">
+                            <img src="../resources/wpp.png" alt="" class="redes">
+                            <p class="mensj-ange text-cont">  (+54)3476...</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </main>
-    <footer>
-
-
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
-</body>
-</html>
