--- a/pages/registros.html
+++ b/pages/registros.html
@@ -48,23 +48,19 @@
         </nav>
     </header>
     <main>
-        <div class="card_reg">
-        <div class="card mb-3 card-reg">
-            <div class="row g-0" >
-                <div class="col-md-4">
-                    <img src="../resources/registros-uno.jfif" class="img-fluid rounded-start reg-img" alt="...">
-                </div>
-                <div class="col-md-8">
-                    <div class="card-body">
+        <main>
+            <div class="max-container">
+                <div class="card-main">
+                    <img src="../resources/registros-uno.jfif" class="msnj-img img-fluid rounded-start" alt="">
+                    <div class="card-body card-regs">
                         <h1 class="card-title">Registros Akáshicos</h1>
-                        <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem fugit necessitatibus illum labore? Nulla quibusdam, nostrum quia et, vel harum optio molestiae recusandae, autem tempore temporibus inventore totam? Accusantium, incidunt. Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo quisquam tempore pariatur placeat odio facilis veritatis repudiandae nesciunt cupiditate eveniet atque ullam, porro ab culpa temporibus! Quisquam dolore molestiae expedita. Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repellat provident repudiandae distinctio praesentium quidem fugit veniam labore numquam, facilis ab dignissimos beatae similique impedit iste natus dolore, perspiciatis sapiente debitis!</p>
-                        <p class="card-text"><small class="text-muted">$$$$$$</small></p>
-                        <a href="#" class="btn btn-primary">Quiero </a>
+                        <p class="mensj-ange">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab at culpa veritatis commodi! Molestias amet suscipit temporibus necessitatibus error optio est recusandae voluptatibus corporis, eius laboriosam! Aut ducimus corrupti possimus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sequi inventore quaerat molestias consequuntur qui esse vel, consequatur, dicta deserunt eveniet et! Praesentium mollitia cum aperiam tenetur placeat! Velit, nobis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim, consequuntur quis. Corporis facere tempora aliquam aperiam ad asperiores nam ratione facilis, quis hic, in eligendi deleniti nemo ipsum, quisquam impedit!</p>
+                        <p>$$$$</p>
+                        <a href="#" class="btn  boton">Quiero </a>
                     </div>
                 </div>
             </div>
-        </div>
-        </div>
+        </main>
     </main>
     <footer>
 
