--- a/pages/mensajes.html
+++ b/pages/mensajes.html
@@ -4,39 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel ="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Marcellus&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg nav-fondo">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Amrita</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand font-color nav_link" href="#">
+                    <img class="logo" src="../resources/logo.png">
+                    
+                </a>
+                <button class="navbar-toggler navbar-toggler-border-color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label=" Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link font-color separator nav-mnsj" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Talleres</a>
+                            <a class="nav-link font-color separator nav-mnsj" href="../pages/registros.html">Registros Akáshicos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Registros Akashicos</a>
+                            <a class="nav-link font-color separator nav-mnsj" href="tarot.html">Tarot Evolutivo</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Tarot Evolutivo</a>
+                            <a class="nav-link font-color page_active separator nav-mnsj" href="mensajes.html">MENSAJES ANGELICOS</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Mensajes Angelicales</a>
+                            <a class="nav-link font-color separator nav-mnsj" href="talleres.html">Talleres</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contactame</a>
+                            <a class="nav-link font-color nav-mnsj" href="contacto.html">Contactame</a>
                         </li>
                     </ul>
                 </div>
@@ -44,8 +48,15 @@
         </nav>
     </header>
     <main>
-
-
+        <div class="max-container">
+            <div class="card-main">
+                <img src="../resources/mensajes-ang.jfif" class="msnj-img img-fluid rounded-start" alt="">
+                <div class="card-body card-mnsj">
+                    <h1 class="card-title">Mensaje Angelical Semanal</h1>
+                    <p class="mensj-ange">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab at culpa veritatis commodi! Molestias amet suscipit temporibus necessitatibus error optio est recusandae voluptatibus corporis, eius laboriosam! Aut ducimus corrupti possimus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sequi inventore quaerat molestias consequuntur qui esse vel, consequatur, dicta deserunt eveniet et! Praesentium mollitia cum aperiam tenetur placeat! Velit, nobis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim, consequuntur quis. Corporis facere tempora aliquam aperiam ad asperiores nam ratione facilis, quis hic, in eligendi deleniti nemo ipsum, quisquam impedit!</p>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
