--- a/pages/tarot.html
+++ b/pages/tarot.html
@@ -4,39 +4,43 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+    <link rel ="stylesheet" href="../css/styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Berkshire+Swash&family=Marcellus&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <title>Document</title>
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <nav class="navbar navbar-expand-lg nav-fondo">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Amrita</a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <a class="navbar-brand font-color nav_link" href="#">
+                    <img class="logo" src="../resources/logo.png">
+                    
+                </a>
+                <button class="navbar-toggler navbar-toggler-border-color" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label=" Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">Inicio</a>
+                            <a class="nav-link font-color separator nav-tarot" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Talleres</a>
+                            <a class="nav-link font-color separator nav-tarot" href="../pages/registros.html">Registros Akáshicos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Registros Akashicos</a>
+                            <a class="nav-link font-color page_active separator nav-tarot" href="tarot.html">TAROT EVOLUTIVO</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Tarot Evolutivo</a>
+                            <a class="nav-link font-color separator nav-tarot" href="mensajes.html">Mensajes Angelicos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Mensajes Angelicales</a>
+                            <a class="nav-link font-color separator nav-tarot" href="talleres.html">Talleres</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Contactame</a>
+                            <a class="nav-link font-color nav-tarot" href="contacto.html">Contactame</a>
                         </li>
                     </ul>
                 </div>
@@ -44,8 +48,43 @@
         </nav>
     </header>
     <main>
-
-
+        <div class="max-container">
+            <div class="card-main">
+                <img src="../resources/tarot.png" class="tarot_img img-fluid rounded-start" alt="">
+                <div class="card-body card-tarot">
+                    <h1 class="card-title">Tarot Evolutivo</h1>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab at culpa veritatis commodi! Molestias amet suscipit temporibus necessitatibus error optio est recusandae voluptatibus corporis, eius laboriosam! Aut ducimus corrupti possimus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sequi inventore quaerat molestias consequuntur qui esse vel, consequatur, dicta deserunt eveniet et! Praesentium mollitia cum aperiam tenetur placeat! Velit, nobis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim, consequuntur quis. Corporis facere tempora aliquam aperiam ad asperiores nam ratione facilis, quis hic, in eligendi deleniti nemo ipsum, quisquam impedit!</p>
+                    <p>$$$$</p>
+                    <!-- <a href="#" class="btn btn-tarot boton">Quiero </a> -->
+                </div>
+            </div>
+        </div>
+        <div class="container option-container">
+            <div class="card container col-4 col-sm-12 tarot-option" style="width: 18rem;">
+                <img src="../resources/animales-poder.jfif" class="card-img-top option-img" alt="...">
+                <div class="card-body card-tarot">
+                    <h5 class="card-title">Animales de Poder</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-tarot">Quiero!</a>
+                </div>
+            </div>
+            <div class="card container col-4 col-sm-12 tarot-option" style="width: 18rem;">
+                <img src="../resources/madre-maria.jfif" class="card-img-top option-img" alt="...">
+                <div class="card-body card-tarot">
+                    <h5 class="card-title">Madre Maria</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-tarot">Quiero!</a>
+                </div>
+            </div>
+            <div class="card container col-4 col-sm-12 tarot-option" style="width: 18rem;">
+                <img src="../resources/angeles-nueva.jfif" class="card-img-top option-img" alt="...">
+                <div class="card-body card-tarot">
+                    <h5 class="card-title">Angeles Nueva Era</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    <a href="#" class="btn btn-tarot">Quiero!</a>
+                </div>
+            </div>
+        </div>
     </main>
     <footer>
 
