--- a/pages/about.html
+++ b/pages/about.html
@@ -53,7 +53,10 @@
                 <img src="../resources/about.jfif" class="tarot_img img-fluid rounded-start" alt="">
                 <div class="card-body card-mnsj">
                     <h1 class="card-title">Sobre Mi</h1>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab at culpa veritatis commodi! Molestias amet suscipit temporibus necessitatibus error optio est recusandae voluptatibus corporis, eius laboriosam! Aut ducimus corrupti possimus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sequi inventore quaerat molestias consequuntur qui esse vel, consequatur, dicta deserunt eveniet et! Praesentium mollitia cum aperiam tenetur placeat! Velit, nobis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim, consequuntur quis. Corporis facere tempora aliquam aperiam ad asperiores nam ratione facilis, quis hic, in eligendi deleniti nemo ipsum, quisquam impedit!</p>
+                    <p>Hola! Me presento, Soy Maria Eugenia Fernandez, terapeuta Holística.</p>
+                    <p>Este es un espacio para que puedas encontrar tu poder interior. Descubre quien eres en realidad. Vence los miedos, quita las barreras, disfruta de la libertad del ser. Quiero ayudarte a encontrar la conexion con la DIVINIDAD que habita en ti. Tu universo interno se expresa, escuchalo. Ningun ser externo a ti es tu MAESTRO. TÚ si lo eres</p>
+                    <p>Ofrezco mis servicios como canalizadora en los Registros Akáshicos, Tarot Evolutivo y mensajes Angélicos.</p>
+                    <p class="bold"> ✨Encuntra tu poder y vive en plenitud✨</p>
                 </div>
             </div>
         </div>
