--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -48,15 +48,15 @@
         </nav>
     </header>
     <main>
-        <div class="max-container">
+        <div class="max-container mns-ang">
             <div class="card-main">
                 <img src="../resources/talleres.jfif" class="msnj-img img-fluid rounded-start" alt="">
                 <div class="card-body card-reg">
                     <h1 class="card-title">Ponete en contacto conmigo</h1>
                     <div >
                         <div class="card-contacto">
-                            <img src="../resources/instagram.png" alt="" class="redes">
-                            <p class="mensj-ange text-cont">  @amrita.espaciodeluz</p>
+                            <a href=""><img src="../resources/instagram.png" alt="" class="redes"></a>
+                            <a href=""><p class="mensj-ange text-cont">  @amrita.espaciodeluz</p></a>
                         </div>
                         <div class="card-contacto">
                             <img src="../resources/mail.png" alt="" class="redes">
