--- a/pages/mensajes.html
+++ b/pages/mensajes.html
@@ -48,12 +48,13 @@
         </nav>
     </header>
     <main>
-        <div class="max-container">
+        <div class="max-container mns-ang">
             <div class="card-main">
                 <img src="../resources/mensajes-ang.jfif" class="msnj-img img-fluid rounded-start" alt="">
                 <div class="card-body card-mnsj">
-                    <h1 class="card-title">Mensaje Angelical Semanal</h1>
-                    <p class="mensj-ange">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab at culpa veritatis commodi! Molestias amet suscipit temporibus necessitatibus error optio est recusandae voluptatibus corporis, eius laboriosam! Aut ducimus corrupti possimus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sequi inventore quaerat molestias consequuntur qui esse vel, consequatur, dicta deserunt eveniet et! Praesentium mollitia cum aperiam tenetur placeat! Velit, nobis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim, consequuntur quis. Corporis facere tempora aliquam aperiam ad asperiores nam ratione facilis, quis hic, in eligendi deleniti nemo ipsum, quisquam impedit!</p>
+                    <h1 class="card-title">Mensajes Angélicos</h1>
+                    <p class="mensj-ange bold">Beneficios de recibir un Mensaje Angelico</p>
+                    <p class="mensj-ange">Los Angeles se comunican de diferentes formas, para que tu camino evolutivo sea más fácil. Lo importante es estar muy atento a las señales. En Amrita podras recibir un mensaje Angélico que reconforte y guíe tu alma</p>
                 </div>
             </div>
         </div>
