--- a/pages/tarot.html
+++ b/pages/tarot.html
@@ -50,10 +50,15 @@
     <main>
         <div class="max-container">
             <div class="card-main">
-                <img src="../resources/tarot.png" class="tarot_img img-fluid rounded-start" alt="">
+                <img src="../resources/tarot.jpg" class="tarot_img img-fluid rounded-start" alt="">
                 <div class="card-body card-tarot">
                     <h1 class="card-title">Tarot Evolutivo</h1>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab at culpa veritatis commodi! Molestias amet suscipit temporibus necessitatibus error optio est recusandae voluptatibus corporis, eius laboriosam! Aut ducimus corrupti possimus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sequi inventore quaerat molestias consequuntur qui esse vel, consequatur, dicta deserunt eveniet et! Praesentium mollitia cum aperiam tenetur placeat! Velit, nobis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim, consequuntur quis. Corporis facere tempora aliquam aperiam ad asperiores nam ratione facilis, quis hic, in eligendi deleniti nemo ipsum, quisquam impedit!</p>
+                    <p class="tar bold">¿En que consiste?</p>
+                    <p class="tar">Se realiza una tirada de tres cartas del Tarot Evolutivo, donde los Seres de Luz se comunican para iluminar tu camino evolutivo en el Aquí y Ahora. Tambien se realiza una canalizacion de un mensaje personalizado donde se le da un cierre a la tirada de cartas</p>
+                    <p class="tar bold">¿Que tipos de Seres podes elegir?</p>
+                    <p>Animales de poder: </p>
+                    <p>Madre Maria: </p>
+                    <p>Angeles Nueva Era: </p>
                     <p>$$$$</p>
                     <!-- <a href="#" class="btn btn-tarot boton">Quiero </a> -->
                 </div>
