--- a/pages/registros.html
+++ b/pages/registros.html
@@ -54,7 +54,10 @@
                     <img src="../resources/registros-uno.jfif" class="msnj-img img-fluid rounded-start" alt="">
                     <div class="card-body card-regs">
                         <h1 class="card-title">Registros Akáshicos</h1>
-                        <p class="mensj-ange">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab at culpa veritatis commodi! Molestias amet suscipit temporibus necessitatibus error optio est recusandae voluptatibus corporis, eius laboriosam! Aut ducimus corrupti possimus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sequi inventore quaerat molestias consequuntur qui esse vel, consequatur, dicta deserunt eveniet et! Praesentium mollitia cum aperiam tenetur placeat! Velit, nobis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim, consequuntur quis. Corporis facere tempora aliquam aperiam ad asperiores nam ratione facilis, quis hic, in eligendi deleniti nemo ipsum, quisquam impedit!</p>
+                        <p class="regis-ak bold">¿Que son los Registros Akáshicos?</p>
+                        <p class="regis-ak"> Son una puerta de entrada a nuestra interioridad. A nuestra alma. Una forma diferente para saber más sobre uno mismo. Son las memorias del alma, donde se guardan los archivos que contienen la historia de toda la existencia.</p>
+                        <p class="regis-ak bold">¿Que ocurre al abrir tu Registro Akáshico?</p>
+                        <p class="regis-ak">Al abrir tu Registro te encontraras con conocimientos sobre el pasado y presente, esperiencias del viaje que tu alma hizo desde el inicio de los tiempos hasta el momento presente</p>
                         <p>$$$$</p>
                         <a href="#" class="btn  boton">Quiero </a>
                     </div>
