--- a/pages/talleres.html
+++ b/pages/talleres.html
@@ -48,14 +48,15 @@
         </nav>
     </header>
     <main>
-        <div class="max-container">
+        <div class="max-container mns-ang">
             <div class="card-main">
                 <img src="../resources/talleres.jfif" class="msnj-img img-fluid rounded-start" alt="">
                 <div class="card-body card-tarot">
-                    <h1 class="card-title">Proximo Taller</h1>
+<!--                     <h1 class="card-title">Proximo Taller</h1>
                     <p class="mensj-ange">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ab at culpa veritatis commodi! Molestias amet suscipit temporibus necessitatibus error optio est recusandae voluptatibus corporis, eius laboriosam! Aut ducimus corrupti possimus. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia sequi inventore quaerat molestias consequuntur qui esse vel, consequatur, dicta deserunt eveniet et! Praesentium mollitia cum aperiam tenetur placeat! Velit, nobis! Lorem ipsum, dolor sit amet consectetur adipisicing elit. Enim, consequuntur quis. Corporis facere tempora aliquam aperiam ad asperiores nam ratione facilis, quis hic, in eligendi deleniti nemo ipsum, quisquam impedit!</p>
                     <p>$$$$</p>
-                    <a href="#" class="btn btn-taller boton">Quiero </a>
+                    <a href="#" class="btn btn-taller boton">Quiero </a> -->
+                    <h1 class="card-title tall-prox">Proximamente estaremos anunciando nuevas fechas!</h1>
                 </div>
             </div>
         </div>
